objects/MedProBT__File_Result__c.object
<CustomObject>
    <fields>
        <fullName>MedProBT__Column_Headers__c</fullName>
        <label>Column Headers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MedProBT__Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MedProBT__Delimiter__c</fullName>
        <label>Delimiter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__File_Type__c</fullName>
        <label>File Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Inbound_ID__c</fullName>
        <label>Inbound ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Info_Messages__c</fullName>
        <label>Info Messages</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MedProBT__Number_of_Batches__c</fullName>
        <label>Number of Batches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedProBT__Number_of_Records__c</fullName>
        <label>Number of Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedProBT__Number_of_Records_per_Batch__c</fullName>
        <label>Number of Records per Batch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedProBT__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Not Processed</fullName>
                </value>
                <value>
                    <fullName>Processed Successfully</fullName>
                </value>
                <value>
                    <fullName>Processed with Errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MedProBT__UMR_Count__c</fullName>
        <label>UMR Count</label>
        <summarizedField>MedProBT__Batch_Result__c.MedProBT__UMR_Count__c</summarizedField>
        <summaryForeignKey>MedProBT__Batch_Result__c.MedProBT__File_Result__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>MedPro File Result</label>
    <listViews>
        <fullName>MedProBT__All</fullName>
        <columns>NAME</columns>
        <columns>MedProBT__Created_Date__c</columns>
        <columns>MedProBT__Delimiter__c</columns>
        <columns>MedProBT__File_Type__c</columns>
        <columns>MedProBT__Inbound_ID__c</columns>
        <columns>MedProBT__Number_of_Batches__c</columns>
        <columns>MedProBT__Number_of_Records__c</columns>
        <columns>MedProBT__Number_of_Records_per_Batch__c</columns>
        <columns>MedProBT__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FR-{0000000}</displayFormat>
        <label>File Results Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MedPro File Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>